# palmmeteo

./: README.md  TODO.md  pyproject.toml  requirements.txt  setup_uv  test_plugin_system.py
docs/source/: api.rst  conf.py  index.rst
docs/source/examples/: template.yaml
docs/source/pages/: extending.md
examples/: template.yaml  test_config.yaml
palmmeteo/: __init__.py  calculator.py  config.py  config_init.yaml  dispatch.py  exceptions.py  fileutils.py  io.py  library.py  logging.py  netcdfutils.py  plugins.py  position.py  regridder.py  runtime.py  time.py  timeutils.py  units.py  utils.py  vinterp.py  workflow.py
palmmeteo/core/: __init__.py  config.py  config_model.py  dispatch.py  runtime.py
palmmeteo/data/: __init__.py  calculator.py  io.py  netcdfutils.py
palmmeteo/exceptions/: __init__.py
palmmeteo/interpolation/: __init__.py  regridder.py  vinterp.py
palmmeteo/physics/: __init__.py  physics.py
palmmeteo/plugins/: __init__.py  hookspecs.py  plugin_impl.py  plugin_manager.py  plugins.py
palmmeteo/utils/: __init__.py  chunking.py  constants.py  fileutils.py  position.py  sliceutils.py  time.py  units.py  utils.py
palmmeteo/workflow/: __init__.py  workflow.py
palmmeteo_stdplugins/: write.py
