[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.uv]
# UV specific configuration
# This section contains configuration for the uv package manager

# Dependencies
# Note: Dependencies are still managed via requirements.txt for compatibility
# with both pip and uv

# Development dependencies
[dependency-groups]
test = ["pytest>=7.0"]
doc = ["sphinx", "sphinx-rtd-theme"]
dev = ["black", "isort", "flake8"]

# Python version requirements
# python = ">=3.10"

[project]
name = "palmmeteo"
version = "2.7.4"
authors = [
  { name="Pavel Krc", email="krc@cs.cas.cz" },
]
description = "PALM-meteo: processor of meteorological input data for the PALM model system."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 4 - Beta",
]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "asteval>=1.0.8 ; python_full_version >= '3.10'",
    "netcdf4>=1.7.2",
    "numpy>=2.1 ; python_full_version >= '3.10'",
    "pint>=0.23 ; python_full_version >= '3.9'",
    "pyproj>=3.7 ; python_full_version >= '3.10'",
    "pytest>=7.0",
    "pyyaml>=6.0",
    "pyzstd>=0.19.1 ; python_full_version < '3.14'",
    "scipy>=1.15 ; python_full_version >= '3.10'",
]

[project.scripts]
pmeteo = "palmmeteo:main"

[project.urls]
Homepage = "https://github.com/PALM-tools/palmmeteo"
Issues = "https://github.com/PALM-tools/palmmeteo/issues"

[project.optional-dependencies]
vinterp_metpy = ["metpy>=1.6"]
geostrophic_wind = ["metpy>=1.6"]
aladin = ["cfgrib>=0.9.10", "xarray>=2024.1.0"]
plot = ["matplotlib>=3.0"]

[tool.setuptools]
packages = ["palmmeteo", "palmmeteo_stdplugins"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "palmmeteo/_version.py"
